syntax = "proto3";

option java_package = "com.cactusknights.chefbook";
option java_multiple_files = true;

message SettingsProto {
  enum AppMode {
    OFFLINE = 0;
    ONLINE = 1;
  }
  enum AppIcon {
    STANDARD = 0;
    OLD = 1;
  }
  enum AppTheme {
    SYSTEM = 0;
    LIGHT = 1;
    DARK = 2;
  }
  enum Tab {
    RECIPE_BOOK = 0;
    SHOPPING_LIST = 1;
  }
  AppMode appMode = 1;
  AppIcon appIcon = 2;
  AppTheme appTheme = 3;
  Tab defaultTab = 4;
  bool isFirstAppLaunch = 5;
  string defaultRecipeLanguage = 6;
  repeated string onlineRecipesLanguages = 7;
}
